--- a/api-gateway/api-gateway/src/main/resources/application.properties
+++ b/api-gateway/api-gateway/src/main/resources/application.properties
@@ -1,17 +1,24 @@
 spring.application.name=api-gateway
-
 server.port=8080
 
-eureka.client.service-url.defaultZone=http://localhost:8761/eureka/  # URL for Eureka server
+# Eureka Client Configuration
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
 
+# Define routes for each service via the API Gateway
 spring.cloud.gateway.routes[0].id=hotel-service
 spring.cloud.gateway.routes[0].uri=lb://HOTEL-SERVICE
 spring.cloud.gateway.routes[0].predicates[0]=Path=/hotels/**
+spring.cloud.gateway.routes[0].filters[0]=RewritePath=/hotels(?<segment>/?.*), /api/hotels${segment}
 
-spring.cloud.gateway.routes[1].id=flight-service
-spring.cloud.gateway.routes[1].uri=lb://FLIGHT-SERVICE
-spring.cloud.gateway.routes[1].predicates[0]=Path=/flights/**
 
-spring.cloud.gateway.routes[2].id=car-service
-spring.cloud.gateway.routes[2].uri=lb://CAR-SERVICE
-spring.cloud.gateway.routes[2].predicates[0]=Path=/cars/**
+# Enable reactive web support
+spring.main.web-application-type=reactive
+
+# Eureka client settings
+eureka.client.register-with-eureka=true
+eureka.client.fetch-registry=true
+
+
+
+logging.level.org.springframework.cloud.gateway=DEBUG
+logging.level.reactor.netty.http.client=DEBUG
