--- a/config-repo/application-config-server.properties
+++ b/config-repo/application-config-server.properties
@@ -2,10 +2,10 @@
 server.port=8888  # Config Server port
 
 # Git repository URL to fetch configurations from
-spring.cloud.config.server.git.uri=https://github.com/Ayoub0023/config-repo
+spring.cloud.config.server.git.uri=https://github.com/Ayoub0023/AgenceDeVoyage.git
 
-# Optional: Folder where config files are stored in the Git repo (if applicable)
-spring.cloud.config.server.git.search-paths=services
+# Folder where config files are stored in the Git repo
+spring.cloud.config.server.git.search-paths=config-repo
 
-# Optional: Specify the default branch
-spring.cloud.config.server.git.default-label=main  # Replace with your branch name if different
+# Default branch (main is typical, replace if different)
+spring.cloud.config.server.git.default-label=main
