--- a/eureka-server/eureka-server/src/main/resources/application.properties
+++ b/eureka-server/eureka-server/src/main/resources/application.properties
@@ -1,6 +1,9 @@
+# Eureka Server settings
 spring.application.name=eureka-server
-
 server.port=8761
 
-eureka.client.register-with-eureka=false
-eureka.client.fetch-registry=false
+# Prevent this instance from registering with Eureka itself
+eureka.client.registerWithEureka=false
+
+# Prevent Eureka from fetching the registry from other Eureka servers
+eureka.client.fetchRegistry=false
